# goit_fullstack_course

lesson1/: Pipfile  log.txt  pyproject.toml
lesson1/design_patterns/: adapter.py  observer.py  singleton.py
lesson1/other/: abstraction.py  test.py
lesson1/solid/: interface_segregation.py  liskov_substitution.py  open_closed.py  single_responsibility.py
lesson2/: Dockerfile  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
lesson2/dbstorage/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-289ebd67-7a64-48b8-a793-94d772c712e0.wt  collection-97f0dc89-eb5b-4f44-bed2-83bc2b9ef2b1.wt  index-670b1f37-e1a7-482d-8d02-b88158bfe943.wt  index-96581c27-78e4-40eb-89cc-fb3d36770ae6.wt  sizeStorer.wt
lesson2/dbstorage/_tmp/spilldb/: WiredTiger.turtle  WiredTiger.wt
lesson2/dbstorage/diagnostic.data/: metrics.2026-04-02T17-21-13Z-00000
lesson3/: app.py  contact.html  error.html  index.html  jinja_test.html  output.html  pyproject.toml  requester.py  test_jinja2 copy.py  test_jinja2.py
lesson4/: lesson.py  pyproject.toml
lesson5/: README.md  pyproject.toml
lesson5/data/: core_practice.db  pep249_practice.db  practice.db  practice_async.db
lesson5/fastapi_practice_app/: README.md  app.db  pyproject.toml
lesson5/fastapi_practice_app/app/: db_init.py  main.py
lesson5/fastapi_practice_app/app/api/: deps.py
lesson5/fastapi_practice_app/app/api/v1/: health.py  router.py  tasks.py  users.py
lesson5/fastapi_practice_app/app/core/: config.py  database.py
lesson5/fastapi_practice_app/app/models/: task.py  user.py
lesson5/fastapi_practice_app/app/repositories/: task_repository.py  user_repository.py
lesson5/fastapi_practice_app/app/schemas/: task.py  user.py
lesson5/fastapi_practice_app/app/services/: task_service.py  user_service.py
lesson5/src/: core_demo.py  db.py  execute_demo.py  main.py  models.py  orm_async_demo.py  orm_sync_demo.py  pep249_demo.py
lesson6/: alembic_models1.db  pyproject.toml
lesson6 demo/: alembic.ini  mynotes.db  pyproject.toml
lesson6 demo/migrations/: env.py
lesson6 demo/migrations/versions/: 2026_04_16_1350_4676c07737d9_initial_migration.py  2026_04_16_1351_ebec0c0b3aba_seed_demo_data_raw_sql.py  2026_04_16_1352_5e53ef7509aa_seed_demo_data_no_raw_sql.py
lesson6 demo/src/: async_demo.py  connect.py  events_demo.py  models.py  query_demo.py  seeds.py  transactions_async_demo.py  transactions_sync_demo.py  validation_demo.py
lesson6/migrations/: env.py
lesson6/migrations/versions/: 2026_04_16_2051-c7cc451a11dd_initial_migration.py  2026_04_16_2052-87dc3057023c_initial_migration.py  2026_04_16_2057-4a6740003efd_insert_some_data.py
lesson6/src/: db.py  events.py  models.py  transactions.py
lesson7/: db.py  main.py  pyproject.toml  test_db.db
lesson7 demo/: db.py  lesson7_demo.db  main.py  pyproject.toml
lesson7 demo/static/: style.css
lesson7 demo/templates/: index.html
lesson7/models/: base.py  user.py
lesson7/schemas/: default_schemas.py  user_schemas.py
lesson7/static/: style.css
lesson8/: .env.default  docker-compose.yml  pyproject.toml
lesson8 demo/: README.md  docker-compose.yml  pyproject.toml
lesson8 demo/migrations/versions/: 91df65b92a37_initial_migration.py
lesson8 demo/src/: main.py  settings.py
lesson8 demo/src/api/: notes.py  tags.py  utils.py
lesson8 demo/src/db/: seed.py  session.py
lesson8 demo/src/db/models/: __init__.py  associations.py  note.py  tag.py
lesson8 demo/src/repository/: tags.py
lesson8 demo/src/schemas/: __init__.py  notes.py  tags.py
lesson8 demo/src/services/: notes.py  tags.py
lesson8/migrations/: env.py
lesson8/migrations/versions/: c2ca721425b2_initial_migration.py
lesson8/src/: main.py  settings.py
lesson8/src/db/: session.py
lesson8/src/db/models/: note.py
lesson8/src/repositories/: notes.py  tags.py
lesson8/src/routers/: notes.py  tags.py
lesson8/src/schemas/: notes.py  pagination.py  tags.py
lesson8/src/services/: notes.py  tags.py
lesson9/: README.md  jwt_auth_lesson.db  pyproject.toml
lesson9 demo/: README.md  pyproject.toml
lesson9 demo/hot_swap_bundle/: app.py  auth.py  config.py  db.py  hot_swap_bundle.db  schemas.py
lesson9 demo/pair_tokens/: app.py  auth.py  db.py
lesson9 demo/pair_tokens_cookies/: app.py  auth.py  db.py
lesson9 demo/pair_tokens_stateless/: app.py  auth.py  db.py  pair_tokens_stateless.db
lesson9 demo/single_token/: app.py  auth.py  db.py
lesson9 demo/single_token_bearer/: app.py  auth.py  db.py
lesson9/src/: app.py  auth.py  config.py  db.py  routers.py  schemas.py
