[project]
name = "lesson3"
version = "0.1.0"
description = ""
authors = [
    {name = "bogd1",email = "bgnydyn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
