[project]
name = "lesson4"
version = "0.1.0"
description = ""
authors = [
    {name = "bogd1",email = "bgnydyn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "aiofile (>=3.9.0,<4.0.0)",
    "aiopath (>=0.7.7,<0.8.0)",
    "aioshutil (>=1.6,<2.0)",
    "aiohttp (>=3.13.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
