[tool.poetry]
name = "sqlalchemy-practice-topic5"
version = "0.1.0"
description = "Practice project for SQLAlchemy ORM topic"
authors = ["GoIT Student <student@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = ">=2.0"
aiosqlite = ">=0.20"
greenlet = ">=3.0"
black = "^26.3.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
