[project]
name = "lesson7"
version = "0.1.0"
description = ""
authors = [
    {name = "bogd1",email = "bgnydyn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.45.0,<0.46.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "pydantic (>=2.13.3,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "aisqlite (>=1.1.0,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "greenlet (>=3.4.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
