[project]
name = "lesson-9-demo-jwt-auth"
version = "0.1.0"
description = "JWT authentication and authorization lesson demos"
readme = "README.md"
authors = [{ name = "GoIT Student", email = "student@example.com" }]
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "python-jose[cryptography]",
  "pwdlib[argon2]",
  "python-multipart",
  "pydantic-settings (>=2.14.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
