[project]
name = "lesson9"
version = "0.1.0"
description = ""
authors = [
    {name = "bogd1",email = "bgnydyn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]


[tool.poetry.scripts]
start = "src.app:start"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
