[tool.poetry]
name = "fastapi-practice-app"
version = "0.1.0"
description = "Practice FastAPI demo app with async SQLAlchemy"
authors = ["GoIT Student <student@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
sqlalchemy = ">=2.0"
aiosqlite = ">=0.20"
pydantic-settings = ">=2.4.0"
email-validator = ">=2.2.0"
greenlet = ">=3.0"
black = "^26.3.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
